[package]
name = "deimosreborn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
simple_logger = "2.3"
specs = "0.18.0"
sdl2-sys = "0.35"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["gfx", "image", "mixer"]
